# loom-qgis-plugin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  __init__.py  _config.h.in  algorithm_config.json  loom_algorithms.py  loom_provider.py  loom_qgis_plugin.py  metadata.txt  plugin.py  pyproject.toml  pytest.ini  requirements.txt  resources.qrc  setup.cfg  setup.py  wrapper.py
.github/workflows/: dev.yml  release.yml  test-wheel.yml  wheels.yml
examples/: P036.dump.points.json
i18n/: loom_qgis_plugin_en.ts
loom_python_plugin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: build_plugin_zip.ps1  build_plugin_zip.sh  fetch_plugin.ps1  fetch_plugin.sh  generate-build.sh  test_wheel_local.sh  validate_geojson_linegraph.py
tests/: test_hello_wheel.py  test_io.py  test_plugin.py  test_shared_libraries.py  test_wrapper_integration.py
tests/output/: wien-loom_python-out.json
