[build-system]
requires = ["setuptools>=61", "pybind11[global]>=2.10", "cmake>=3.18,<4"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# CPython 3.12–3.14, 64-bit
build = ["cp312-*", "cp313-*", "cp314-*"]
skip  = ["*-manylinux_i686", "*-musllinux*"]

build-frontend = "build"

# ---------- Linux ----------
[tool.cibuildwheel.linux]
archs = ["x86_64"]
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_28_x86_64:latest"

before-all = [
    "dnf install -y epel-release && dnf install -y ccache libzip-devel cmake",
]

before-build = [
    "pip install pybind11[global]",
]

[tool.cibuildwheel.linux.environment]
CMAKE_BUILD_TYPE = "Release"

# ---------- Windows ----------
[tool.cibuildwheel.windows]
archs = ["AMD64"]   # removed "x86"

# No before-all here — libzip is installed by the workflow step in wheels.yml

[tool.cibuildwheel.windows.environment]
CMAKE_BUILD_TYPE = "Release"
VCPKG_ROOT = "C:/vcpkg"
