[metadata]
name = loom-qgis-plugin
version = 0.1.0
description = A QGIS plugin for managing loom data.
author = Your Name
author_email = your.email@example.com
license = MIT
url = https://github.com/yourusername/loom-qgis-plugin
keywords = QGIS, plugin, loom
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
install_requires =
    PyQt5

[options.packages.find]
where = src

[options.package_data]
loom = wrapper.py